tests/snapshots/update__pin_follows_before_url.snap
---
source: tests/update.rs
expression: updater.get_changes()
---
{
  inputs = {
    myInput = {
      inputs.nixpkgs.follows = "nixpkgs";
      url = "github:foo/bar/abc123";
    };
  };

  outputs = { self, myInput }: { };
}
