tests/snapshots/update__pin_quoted_input_by_bare_name.snap
---
source: tests/update.rs
assertion_line: 111
expression: updater.get_changes()
---
{
  inputs = {
    "nixpkgs-24.11".url = "github:nixos/nixpkgs/abc123";
  };

  outputs = { self, ... }: { };
}
