tests/snapshots/update__unpin_expanded_format_no_crash.snap
---
source: tests/update.rs
expression: updater.get_changes()
---
{
  inputs = {
    myInput = {
      type = "github";
      owner = "NixOS";
      repo = "nixpkgs";
      ref = "nixos-25.11";
    };
    pinned.url = "github:foo/bar";
  };

  outputs = { self, myInput, pinned }: { };
}
