tests/snapshots/update__unpin_follows_before_url.snap
---
source: tests/update.rs
expression: updater.get_changes()
---
{
  inputs = {
    myInput = {
      inputs.nixpkgs.follows = "nixpkgs";
      url = "github:foo/bar";
    };
  };

  outputs = { self, myInput }: { };
}
