tests/snapshots/update__unpin_quoted_input_by_bare_name.snap
---
source: tests/update.rs
expression: updater.get_changes()
---
{
  inputs = {
    "nixpkgs-24.11".url = "github:nixos/nixpkgs";
  };

  outputs = { self, ... }: { };
}
