tests/snapshots/update__unpin_removes_ref_param.snap
---
source: tests/update.rs
expression: updater.get_changes()
---
{
  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs";
    flake-utils.url = "github:numtide/flake-utils?rev=0123456789abcdef0123456789abcdef01234567";
  };

  outputs = { self, nixpkgs, flake-utils }: { };
}
