tests/snapshots/update__unpin_removes_rev_param.snap
---
source: tests/update.rs
expression: updater.get_changes()
---
{
  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs?ref=nixos-unstable";
    flake-utils.url = "github:numtide/flake-utils";
  };

  outputs = { self, nixpkgs, flake-utils }: { };
}
